Fixed center alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,22 @@
-html { 	
+html{
 	font-size: 16px;
 }
 
 body {
-	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	font-size: 1em;
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	flex-flow: 
+        font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1em;
 }
 
-.container{
-	max-width: 1200px;
-	width: 90%;
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	flex-flow: row wrap;
+.container {
+        max-width: 1200px;
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row wrap;
 }
 
 h1,
@@ -31,37 +30,38 @@ h4 {
 
 p {
 	font-size: 0.875em;
-	line-height: 1.3125em;
-   	padding: 0 30px;
+	line-height: 21px;
+}
+
+ul {
+        margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
-	border-bottom: 3px solid #77a466;
-	text-align: center;
-	width: 100%
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	flex-flow: row wrap;
-	
+        border-bottom: 3px solid #77a466;
+        text-align: center;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row wrap;
 }
 
 header h1 {
-	font-size: 1.875em;
-	margin: 0;
-	border-bottom: 3px solid #77a466;
-	padding: 38px 20px 20px 20px;
-	width: 100%;
+        font-size: 1.875em;
+        margin: 0;
+	padding: 38px 20px 20px 20px; 
+    	border-bottom: 3px solid #77a466; 
+    	width: 100%;
 }
-
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 20px 0;
-	width: 100%;
+       padding: 20px 0; 
+       width: 100%; 
 }
 
 header nav ul {
@@ -72,12 +72,12 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 0.875em;
-	padding: 0 10px;
-	list-style: none;
+	font-size: .875em;
+        padding: 10px 0;
+        list-style: none;
 }
 
-header nav ul li a{
+header nav ul li a {
 	text-decoration: none;
 	color:#77a466;
 }
@@ -85,12 +85,11 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	flex-flow: row wrap; 
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	flex-flow: row wrap;
 }
-
 
 .main-image img {
 	width: 100%;
@@ -98,10 +97,10 @@ header nav ul li a{
 }
 
 .main-title h3 {
-	font-size: 1.125em;
 	text-align: left;
 	padding: 5px 0;
-	color: #77a466;
+    	color: #77a466;
+    	font-size: 1.125em;
 }
 
 .main-title p {
@@ -113,14 +112,15 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 100%;
-	border-top: 1px solid #eee;
+    border-top: 1px solid #eee;
+    width: 100%;
 }
 
 .menu {
 	list-style: none;
 	padding: 0;
 }
+
 .menu li {
 	padding: 10px 0;
 	color:#77a466;
@@ -129,28 +129,28 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 1.3125em;
+	line-height: 1.3125;
 }
 
 .address {
-	font-size: 1em;;
-	line-height: 1.5em;
+	font-size: 1em;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
 	border-top: 3px solid #eee;
-	text-align: center;
-	width: 100%
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	flex-flow: row wrap;
+    text-align: center;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 0.875em;
+	font-size: .875em;
 }
